agrego paquete para diseño robado del apunte

--- a/resolucion.tex
+++ b/resolucion.tex
@@ -1,8 +1,8 @@
 \documentclass[10pt, a4paper, spanish]{article}
 \usepackage[paper=a4paper, left=1.5cm, right=1.5cm, bottom=1.5cm, top=3.5cm]{geometry}
-\usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
-\usepackage{aed2-symb,aed2-itef,aed2-tad,caratula}
+\usepackage[spanish]{babel}
+\usepackage{aed2-symb,aed2-itef,aed2-tad,caratula,aed2-dis}
 
 \begin{document}
 
@@ -23,5 +23,6 @@
 
 % compilar 2 veces para actualizar las referencias
 \tableofcontents
-
+	
+	
 \end{document}
