dale que sale con fritas seba

--- a/resolucion.tex
+++ b/resolucion.tex
@@ -2,7 +2,9 @@
 \usepackage[paper=a4paper, left=1.5cm, right=1.5cm, bottom=1.5cm, top=3.5cm]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
-\usepackage{aed2-symb,aed2-itef,aed2-tad,caratula,aed2-dis}
+\usepackage{aed2-symb,aed2-itef,aed2-tad,caratula}
+\usepackage{aed2-dis, algorithmicx, algpseudocode, algorithm}
+
 
 \begin{document}
 
@@ -23,6 +25,5 @@
 
 % compilar 2 veces para actualizar las referencias
 \tableofcontents
-	
-	
+
 \end{document}
