modulo de dicc sobre trie recien empezado

--- a/aed2-dis.sty
+++ b/aed2-dis.sty
@@ -7,7 +7,7 @@
 \RequirePackage{xargs}
 \RequirePackage{xspace}
 
-
+\newcommand{\algoritmo}[3]{\hangindent=\parindent#1 (#2) \ifx#3\empty\else$\rightarrow$ res: #3\fi}
 
 \newcommand{\moduloNombre}[1]{\textbf{#1}}
 
