--- a/resolucion.tex
+++ b/resolucion.tex
@@ -3,8 +3,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{aed2-symb,aed2-itef,aed2-tad,caratula}
-\usepackage{aed2-dis, algorithmicx, algpseudocode, algorithm}
-
+\usepackage{aed2-dis}
+\usepackage[boxruled, lined]{algorithm2e}
 
 \begin{document}
 
@@ -25,5 +25,6 @@
 
 % compilar 2 veces para actualizar las referencias
 \tableofcontents
+
 
 \end{document}
