agregar el modulo perdido, readme lindo

--- a/resolucion.tex
+++ b/resolucion.tex
@@ -26,5 +26,8 @@
 % compilar 2 veces para actualizar las referencias
 \tableofcontents
 
+\pagebreak
+
+\input{modulos/modulo_dic_trie_string}
 
 \end{document}
