--- a/resolucion.tex
+++ b/resolucion.tex
@@ -4,6 +4,7 @@
 \usepackage[spanish]{babel}
 \usepackage{aed2-symb,aed2-itef,aed2-tad,caratula}
 \usepackage{aed2-dis}
+\usepackage[pdfencoding=auto, colorlinks=true, linkcolor=blue]{hyperref}
 \usepackage[boxruled, lined]{algorithm2e}
 
 \begin{document}
