--- a/modulos/modulo_diccString.tex
+++ b/modulos/modulo_diccString.tex
@@ -1,5 +1,6 @@
 \newcommand\dicString{diccString($\alpha$)}
 \newcommand\itDicString{itDiccString($\alpha$)}
+\renewcommand{\labelenumi}{(\Roman{enumi})}
 
 \section{Módulo DiccionarioString(\texorpdfstring{$\alpha$}{α})}
 
@@ -131,16 +132,30 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 
 	\TituloDis{Invariante de Representación del Diccionario}
 
+	\begin{enumerate}
+
+		\item Se cumple el invariante de representación del conjunto de las claves
+
+		\item Todo nodo del trie es válido si o bien es nulo o contiene 256 subnodos válidos
+
+		\item Todo nodo del trie no nulo es válido si o bien no almacena valor o guarda un valor válido
+
+		\item La raíz del trie es un nodo válido no nulo que no guarda valor
+		% TODO tal vez si queremos que se haga nulo o que guarde valor
+
+	\end{enumerate}
+
+
 	\Rep[dicStr][e]{
-		$\neg$(e.raiz == NULL) $\land$ hijoValido(e.raiz)
+		Rep(e.claves) $\land$ nodoValido(e.raiz) $\land \neg$(e.raiz == NULL) $\yluego \neg$(e.raiz.contieneValor)
 	}
 
 	~
 
-	\tadOperacion{hijoValido}{puntero(Nodo)}{bool}{}
+	\tadOperacion{nodoValido}{puntero(Nodo)}{bool}{}
 
-	\tadAxioma{hijoValido(nodo)}{
-		nodo == NULL $\oluego$ ($\forall i \in [0..256)$) (hijoValido(nodo.hijos[i]))
+	\tadAxioma{nodoValido(nodo)}{
+		nodo == NULL $\oluego$ ((nodo.contieneValor $\implies$ Rep(nodo.valor)) $\land$ \\ ($\forall i \in [0$..$256)$) (nodoValido(nodo.hijos[i])))
 	}
 
 	\TituloDis{Función de Abstracción del Diccionario}
@@ -188,7 +203,20 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 
 	\TituloDis{Invariante de Representación del iterador}
 
-	\Rep[itDicStr][it]{Rep(it.itClaves) $\land$ Rep(*it.dic)}
+
+	\begin{enumerate}
+
+		\item Se cumple el invariante de representación del iterador de las claves
+
+		\item El diccionario no es nulo
+
+		\item Se cumple el invariante de representación del diccionario
+
+		\item El iterador de las claves corresponde a las claves del diccionario
+
+	\end{enumerate}
+
+	\Rep[itDicStr][it]{Rep(it.itClaves) $\land \neg$(it.dic = NULL) $\yluego$ \\ (Rep(*it.dic) $\land$ it.itClaves $\igobs$  CrearIterador((*it.dic).claves))}
 
 
 	\TituloDis{Función de Abstracción del iterador}
@@ -247,7 +275,7 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iDefinir}{\Inout{dic}{dicStr}, \In{c}{String}, \In{s}{$\alpha$}}{}}
 		puntero(Nodo): entrada $\leftarrow$ dic.raiz \OdeLinea{1}
-		\For(\OdeBloque{|c|}){$i \leftarrow 0$ \KwTo Longitud(c)}{
+		\For(\OdeBloque{|c_{max}|}){$i \leftarrow 0$ \KwTo Longitud(c)}{
 			\If(\OdeBloque{1}){(*entrada).hijos[ord(c[i])] == NULL} {
 				(*entrada).hijos[ord(c[i])] $\leftarrow$ CrearNodo() \OdeLinea{1}
 			}
@@ -262,7 +290,7 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 		(*entrada).valor $\leftarrow$ s \OdeLinea{copy(s)}
 	\end{algorithm}
 
-	\complejidad: $O(|c| + copy(s))$
+	\complejidad: $O(|c_{max}| + copy(s))$
 
 	\justifcomp: el ciclo itera hasta el largo de la clave a insertar y luego la copia para insertarla; la clave solo se agrega al conjunto si no estaba definida antes
 
@@ -272,7 +300,7 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iDefinido?}{\Inout{dic}{dicStr}, \In{c}{String}}{bool}}
 		puntero(Nodo): entrada $\leftarrow$ dic.raiz \OdeLinea{1}
-		\For(\OdeBloque{|c|}){$i \leftarrow 0$ \KwTo Longitud(c)}{
+		\For(\OdeBloque{|c_{max}|}){$i \leftarrow 0$ \KwTo Longitud(c)}{
 			\lIf(\OdeBloque{1}){entrada == NULL} {break}
 			entrada $\leftarrow$ (*entrada).hijos[ord(c[i])] \OdeLinea{1}
 		}
@@ -281,7 +309,7 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 		res $\leftarrow$ not entrada == NULL \&\& (*entrada).contieneValor \OdeLinea{1}
 	\end{algorithm}
 
-	\complejidad: $O(|c|)$
+	\complejidad: $O(|c_{max}|)$
 
 	\justifcomp: el ciclo como máximo itera hasta el largo de la clave buscada
 
@@ -291,14 +319,14 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iObtener}{\Inout{dic}{dicStr}, \In{c}{String}}{$\alpha$}}
 		puntero(Nodo): entrada $\leftarrow$ dic.raiz \OdeLinea{1}
-		\For(\OdeBloque{|c|}){$i \leftarrow 0$ \KwTo Longitud(c)}{
+		\For(\OdeBloque{|c_{max}|}){$i \leftarrow 0$ \KwTo Longitud(c)}{
 			entrada $\leftarrow$ (*entrada).hijos[ord(c[i])] \OdeLinea{1}
 		}
 
 		res $\leftarrow$ (*entrada).valor \OdeLinea{copy(s)}
 	\end{algorithm}
 
-	\complejidad: $O(|c| + copy(s))$
+	\complejidad: $O(|c_{max}| + copy(s))$
 
 	\justifcomp: el ciclo itera hasta el largo de la clave a obtener y luego la copia para retornarla
 
@@ -308,7 +336,7 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iBorrar}{\Inout{dic}{dicStr}, \In{c}{String}}{}}
 		puntero(Nodo): entrada $\leftarrow$ dic.raiz \OdeLinea{1}
-		\For(\OdeBloque{|c|}){$i \leftarrow 0$ \KwTo Longitud(c)}{
+		\For(\OdeBloque{|c_{max}|}){$i \leftarrow 0$ \KwTo Longitud(c)}{
 			entrada $\leftarrow$ (*entrada).hijos[ord(c[i])] \OdeLinea{1}
 		}
 
